eks-infra/nat-gateways.tf
resource "aws_nat_gateway" "gw1"{

    allocation_id = aws_eip.nat1.id

    subnet_id = aws_subnet.public_1.id

    tags={
        "Name"="NAT1"

    }

}

resource "aws_nat_gateway" "gw2" {

    allocation_id = aws_eip.nat2.id
    subnet_id = aws_subnet.public_2.id

    tags = {
      "Name" = "NAT2"
    }
  
}
